# SimpleEQ

./: .gitignore  .gitmodules  CMakeLists.txt  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  README.md  debug.filtergraph
